--- a/doc/memoria/report.tex
+++ b/doc/memoria/report.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{graphicx}
@@ -59,7 +59,7 @@ Abdulla Hussein Abdulrahm Al Kaff
 % Style
 \lhead{}
 \chead{}
-\rhead{GECKO\\Gesture Recognition}
+\rhead{GECKO: Gesture Recognition}
 \pagestyle{fancy}
 
 %%%%% Includes %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -71,13 +71,13 @@ Abdulla Hussein Abdulrahm Al Kaff
 
 \section{Bibliography}
 
-[1] H.-S. Yeo, B.-G. Lee, and H. Lim, “Hand tracking and gesture recognition system for human-computer interaction using low-cost hardware,” Multimed. Tools Appl., May 2013.
+[1] H.-S. Yeo, B.-G. Lee, and H. Lim,``Hand tracking and gesture recognition system for human-computer interaction using low-cost hardware'', Multimed. Tools Appl., May 2013.
 \\[1cm]
-[2] A. Albiol, L. Torres, and E. J. Delp, “Optimum color spaces for skin detection,” no. 3, pp. 3–5.
+[2] A. Albiol, L. Torres, and E. J. Delp, ``Optimum color spaces for skin detection'', no. 3, pp. 3–5.
 \\[1cm]
-[3] A. Argyros and M. Lourakis, “Tracking skin-colored objects in real-time,” Cut. Edge Robot., 2005.
+[3] A. Argyros and M. Lourakis, ``Tracking skin-colored objects in real-time'', Cut. Edge Robot., 2005.
 \\[1cm]
-[4] V. Vezhnevets, “A Survey on Pixel-Based Skin Color Detection Techniques,” 1994.
+[4] V. Vezhnevets, ``A Survey on Pixel-Based Skin Color Detection Techniques'', 1994.
 
 
 
