--- a/doc/memoria/userguide.tex
+++ b/doc/memoria/userguide.tex
@@ -1,6 +1,6 @@
 \section{User Guide}
-\subsection{ Compile and install }
-\subsubsection{ Requirements }
+\subsection{Compile and install}
+\subsubsection{Requirements}
 This software has currently support only for GNU/Linux systems, as the cursor control is platform-dependent, but as it has a modular design it can be easily extended for being used on Windows or Mac platforms. Nevertheless we do not have any early plans of porting it to other platforms. 
 
 The requirements for compiling and using the software are:
@@ -12,7 +12,7 @@ The requirements for compiling and using the software are:
 
 
 \subsubsection{Compiling}
-\paragraph{ Using CMake }
+\paragraph{Using CMake}
 The folder structure used is the typical of a CMake project. In order to compile using the terminal follow this steps: 
 \begin{enumerate}
  \item Open a terminal in the build directory (gecko/build). 
@@ -20,14 +20,14 @@ The folder structure used is the typical of a CMake project. In order to compile
  \item Enter the command ``make''
 \end{enumerate}
 
-\paragraph{ Using QtCreator}
+\paragraph{Using QtCreator}
 To open the software as a QtCreator project, the only thing needed is to open the main CMakeLists.txt (gecko/CMakeLists.txt) with QtCreator. This will parse the whole project. 
 Afterwards, press the "build" icon to build the project. 
 
 
-\subsubsection{ Run the software without installing it}
+\subsubsection{Running the software}
 
-In order to execute the software, press the convinient button of the QtCreator IDE or open a terminal in the bin directory (gecko/bin) and enter the command "./gecko". 
+In order to execute the software, press the convinient button of the QtCreator IDE or open a terminal in the bin directory (gecko/bin) and enter the command ``./gecko''. 
 
 Once the code is compiled and started, a first window will appear with the information about the software. After pressing enter to continue, this menu will pop up: 
 \begin{center}
