--- a/doc/memoria/userguide.tex
+++ b/doc/memoria/userguide.tex
@@ -22,12 +22,12 @@ The folder structure used is the typical of a CMake project. In order to compile
 
 \paragraph{Using QtCreator}
 To open the software as a QtCreator project, the only thing needed is to open the main CMakeLists.txt (gecko/CMakeLists.txt) with QtCreator. This will parse the whole project. 
-Afterwards, press the "build" icon to build the project. 
+Afterwards, press the ``build'' icon to build the project. 
 
 
 \subsection{Running the software}
 
-In order to execute the software, press the convinient button of the QtCreator IDE or open a terminal in the bin directory (gecko/bin) and enter the command "./gecko". 
+In order to execute the software, press the convinient button of the QtCreator IDE or open a terminal in the bin directory (gecko/bin) and enter the command ``./gecko''. 
 
 Once the code is compiled and started, a first window will appear with the information about the software. After pressing enter to continue, this menu will pop up: 
 \begin{center}
@@ -55,9 +55,11 @@ The two last functionalities may be changed using a configuration file named app
 
 That configuration file contains the following lines:
 \\[0.5cm]
+\begin{center}
 \$gedit\$ 3 \\
 \$gnome-terminal\$ 4
 \\[0.5cm]
+\end{center}
 
 The number 3 refers to the victory sign, and  4 to the gun or L sign. To change the functionality the only thing needed is to change the programs written between the two dollar signs with the wanted one. 
 
