added new pictures -screenshots from the video. Modified doxygen.tex

--- a/doc/memoria/doxygen.tex
+++ b/doc/memoria/doxygen.tex
@@ -1,4 +1,5 @@
 \section{Software Documentation}
-\textbf{[PASTE DOXYGEN OUTPUT]}
-
+The doxygen generated documentation is available in html format in this webpage: 
+\\
+There is also a pdf document called ``GECKO\_ Reference\_ Manual"
 \newpage
