added pictures to the report

--- a/doc/memoria/doxygen.tex
+++ b/doc/memoria/doxygen.tex
@@ -1,5 +1,9 @@
 \section{Software Documentation}
-The doxygen generated documentation is available in html format in this webpage: 
-\\
+The doxygen generated documentation is available in html format in this webpage: \\
+\begin{center}
+http://david-estevez.github.io/gecko/
+\end{center}
+
+\vspace{0.5cm}\hspace{-0.65cm}
 There is also a pdf document called ``GECKO\_ Reference\_ Manual"
 \newpage
