--- a/doc/memoria/userguide.tex
+++ b/doc/memoria/userguide.tex
@@ -63,7 +63,11 @@ That configuration file contains the following lines:
 
 The number 3 refers to the victory sign, and  4 to the gun or L sign. To change the functionality the only thing needed is to change the programs written between the two dollar signs with the wanted one. 
 
-The user should take into account that when the program recognizes a gesture, a bar will appear in the window. In order to filter possible false positives, the user must remain in the same posture until the bar is completely filled for the correct execution of the task associated with the gesture. 
+\begin{center}
+\includegraphics[scale=0.5]{images/victory.png} 
+\end{center}
+
+The user should take into account that when the program recognizes a gesture, a bar will appear in the window. In order to filter possible false positives, the user must remain in the same posture until the bar is completely filled for the correct execution of the task associated with the gesture, as it can be seen in the picture above. 
 
 
 \newpage
