Changed some images to png, for better resolution of images.

--- a/doc/memoria/algorithm.tex
+++ b/doc/memoria/algorithm.tex
@@ -8,7 +8,7 @@ The flowchart of this part of the code is as follows:
 
 \begin{figure}[H]
 	\centering
-	 \includegraphics[width=0.4\textwidth]{../images/hand_filter.jpeg} 
+	 \includegraphics[width=0.4\textwidth]{../images/hand_filter.png} 
 \end{figure}
  
 As it can be seen in the diagram, the first thing done is to detect the face using the ``Face Detection using Haar Cascades'' already implemented and trained in OpenCV. It is a very reliable clasifier because of the huge dataset used in the training phase. It was used this one instead of making our own in order to have a reliable detector without spending too much time on it, as is just a small part of the segmentation. 
@@ -31,7 +31,7 @@ The input of this section is the binary image that was the output of the previou
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{../images/hand_description.jpeg} 
+	\includegraphics[width=0.5\textwidth]{../images/hand_description.png} 
 \end{figure}
 
 
