Added few things in motivation.

--- a/doc/memoria/introduction.tex
+++ b/doc/memoria/introduction.tex
@@ -11,10 +11,9 @@ For the software development we used a version control system based on git, and 
 The code is released under a GPLv3 license, for anyone to download, study and improve our code.
 
 \subsection{Motivation}
-The necessity of doing a software for this subject (Systems of perception) gave us the opportunity to have a deeper knowledge of the theory of the course and of the OpenCV libraries. The first thing that was clear was that the software developed should be useful, and not only implement the theoretical concepts but also have an utility afterwards. That is how the idea of developing a gesture recognition system appeared. 
+The necessity of doing a software for this subject (Perception systems) gave us the opportunity to have a deeper knowledge of the theory of the course and of the OpenCV libraries. The first thing that was clear was that the software developed should be useful, and not only implement the theoretical concepts but also have an utility afterwards.
 
-Also, the possibility of extending this software in the future to different machines (not only computers but also robots with webcams) was a great motivation in doing the whole project. 
-
+Implementing a human-computer interface that used gestures to interact with the computer in a more intuitive way than with a mouse and keyboard seemed a interesting idea to us, as it could be used with a wide variety of programs, from a simple cursor control to games or even more complicated programs. Also, the possibility of extending this software in the future to different machines (not only computers, but also robots with webcams) was a great motivation in doing the whole project. 
 
 \subsection{First Steps}
 
